--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
-#file-open, #file-open-image {
+#file-open,
+#file-open-image {
 	display: none;
 }
 
@@ -6,6 +7,7 @@
 	width: 2em;
 	height: 2em;
 }
+
 .completed {
 	text-decoration: line-through;
 	opacity: 0.7;
